methods.basics.Methods.scala.error
Compilation error:
Methods:5: error: not found: value step
    step =step + 1
    ^Methods:8: error: not found: value step
  for (stepper<-1 to step ){
                     ^